Fix flickering logo in header

--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -90,6 +90,7 @@
   padding-top: 4vh;
   padding-right: 10vw;
   margin-left: auto;
+
   img {
     height: fit-content;
     width: fit-content;
@@ -98,6 +99,7 @@
     margin-bottom: -2vh;
   }
 }
+
 @media (max-width: 800px) {
   #startSectionText {
     width: 100%;
@@ -207,6 +209,7 @@
   width: 25vw;
   align-self: flex-start;
   margin-top: 10vh;
+
   h3 {
     font-weight: normal;
     text-justify: left;
@@ -217,11 +220,13 @@
 #Partners {
   padding-top: 20vh;
   padding-bottom: 15vh;
+
   h2 {
     text-align: center;
     font-weight: normal;
     font-size: 2.2vw;
   }
+
   background-color: #111113;
 }
 
@@ -250,6 +255,7 @@
   background-color: whitesmoke;
   flex-grow: 0;
 }
+
 .partnerImage:hover {
   color: rgba(255, 255, 255, 1);
   box-shadow: 0 5px 15px rgba(145, 92, 182, 0.4);
@@ -288,6 +294,7 @@
     text-align: center;
     font-size: 2.2vw;
   }
+
   p {
     font-weight: normal;
   }
@@ -336,15 +343,22 @@
   color: white;
 }
 
+//#HeaderLogoButton {
+//  height: 20px;
+//  max-width: 100px;
+//  margin: 0%;
+//  object-fit: contain;
+//  align-self: right;
+//  margin-right: 5vw;
+//  margin-left: 10vw;
+//  margin-top: 2vw;
+//}
 #HeaderLogoButton {
-  height: 20px;
-  max-width: 100px;
-  margin: 0%;
+  height: 50px;
+  z-index: 10000;
+  max-width: 100%;
   object-fit: contain;
-  align-self: right;
-  margin-right: 5vw;
-  margin-left: 10vw;
-  margin-top: 2vw;
+  margin: 2vw 5vw 0 10vw;
 }
 
 /** accordian **/
@@ -353,6 +367,7 @@ input {
   opacity: 0;
   z-index: -1;
 }
+
 // Layout
 .row {
   height: auto;
@@ -362,18 +377,22 @@ input {
 
   .col {
     flex: 1;
+
     &:last-child {
     }
   }
 }
+
 /* Accordion styles */
 .tabs {
   overflow: hidden;
 }
+
 .tab {
   width: 100%;
   color: white;
   overflow: hidden;
+
   &-label {
     display: flex;
     justify-content: space-between;
@@ -384,6 +403,7 @@ input {
     &:hover {
       color: var(--grey4);
     }
+
     &::after {
       content: "\276F";
       width: 1em;
@@ -392,12 +412,14 @@ input {
       transition: all 0.35s;
     }
   }
+
   &-content {
     max-height: 0;
     padding: 0 1em;
     color: white;
     transition: all 0.35s;
   }
+
   &-close {
     display: flex;
     justify-content: flex-end;
@@ -405,6 +427,7 @@ input {
     font-size: 0.75em;
     background: transparent;
     cursor: pointer;
+
     &:hover {
       color: rgba(0, 0, 0, 0.1);
     }
@@ -421,6 +444,7 @@ input:checked {
       transform: rotate(90deg);
     }
   }
+
   ~ .tab-content {
     max-height: 100vh;
     padding: 1em;
